@@ -5,29 +5,22 @@ import choreo.auto.AutoRoutine;
 import choreo.auto.AutoTrajectory;
 import edu.wpi.first.math.Pair;
 import edu.wpi.first.math.geometry.Pose2d;
-import edu.wpi.first.math.geometry.Rotation2d;
-import edu.wpi.first.math.geometry.Transform2d;
-import edu.wpi.first.units.Measure;
-import edu.wpi.first.wpilibj.DriverStation;
+import edu.wpi.first.wpilibj.RobotBase;
 import edu.wpi.first.wpilibj.Timer;
-import edu.wpi.first.wpilibj.DriverStation.Alliance;
 import edu.wpi.first.wpilibj2.command.Command;
 import edu.wpi.first.wpilibj2.command.Commands;
+import edu.wpi.first.wpilibj2.command.button.Trigger;
 
-import static edu.wpi.first.units.Units.Meters;
-import static edu.wpi.first.units.Units.Rotations;
-import static frc.robot.autons.TrajsAndLocs.ReefLocs.REEF_H;
 import static frc.robot.autons.TrajsAndLocs.Trajectories.*;
 
 import java.util.ArrayList;
 import java.util.Optional;
 import java.util.Set;
-import java.util.function.BooleanSupplier;
 import java.util.function.Supplier;
 
-import com.ctre.phoenix6.swerve.SwerveRequest;
-
+import frc.robot.Constants.FieldK;
 import frc.robot.Constants.RobotK;
+import frc.robot.FieldConstants;
 import frc.robot.autons.TrajsAndLocs.HPStation;
 import frc.robot.autons.TrajsAndLocs.ReefLocs;
 import frc.robot.autons.TrajsAndLocs.StartingLocs;
@@ -35,7 +28,7 @@ import frc.robot.subsystems.Elevator;
 import frc.robot.subsystems.Superstructure;
 import frc.robot.subsystems.Swerve;
 import frc.robot.subsystems.Elevator.EleHeight;
-import frc.robot.vision.VisionSim;
+import frc.util.AllianceFlipUtil;
 import frc.util.Elastic;
 import frc.util.WaltLogger;
 import frc.util.WaltLogger.DoubleLogger;
@@ -52,7 +45,6 @@ public class WaltAutonFactory {
     private ArrayList<ReefLocs> m_scoreLocs;
     private ArrayList<EleHeight> m_heights; // needs to hv same size as m_scoreLocs
     private ArrayList<HPStation> m_hpStations; // needs to either have same size or one les than m_scoreLocs
-    private boolean m_pushTime; 
 
     int heightCounter = 0;
 
@@ -66,11 +58,11 @@ public class WaltAutonFactory {
 	}
 
     private Command logTimer(String epochName, Supplier<Timer> timerSup) {
-		return Commands.defer(() -> {
-			var timer = timerSup.get();
+        return printLater(() -> {
+            var timer = timerSup.get();
             log_autonTimer.accept(autonTimer.get());
-			return printLater(() -> epochName + " at " + timer.get() + " s");
-		}, Set.of());
+            return epochName + " at " + timer.get() + " s";
+        });
 	}
     
     private Elastic.Notification leaveStartZoneOnlySadness = 
@@ -94,8 +86,7 @@ public class WaltAutonFactory {
         StartingLocs startLoc,
         ArrayList<ReefLocs> scoreLocs,
         ArrayList<EleHeight> heights,
-        ArrayList<HPStation> hpStations,
-        boolean pushTime
+        ArrayList<HPStation> hpStations
     ) {
         m_autoFactory = autoFactory;
         m_routine = m_autoFactory.newRoutine("auton"); 
@@ -107,7 +98,6 @@ public class WaltAutonFactory {
         m_scoreLocs = scoreLocs;
         m_heights = heights;
         m_hpStations = hpStations;
-        m_pushTime = pushTime;
     }
 
     private boolean doNothing() {
@@ -144,27 +134,31 @@ public class WaltAutonFactory {
         }
     }
 
-    private ArrayList<AutoTrajectory> trajMaker() {
-        ArrayList<AutoTrajectory> trajsList = new ArrayList<>();
+    private ArrayList<Pair<AutoTrajectory, Optional<ReefLocs>>> trajMaker() {
+        ArrayList<Pair<AutoTrajectory, Optional<ReefLocs>>> trajsList = new ArrayList<>();
         try {
             for (int i = 0; i < m_scoreLocs.size(); i++) {
                 String rToH = ReefToHPTrajs.get(new Pair<ReefLocs, HPStation>(m_scoreLocs.get(i), m_hpStations.get(i)));
-                trajsList.add(m_routine.trajectory(rToH));
+                trajsList.add(
+                    new Pair<AutoTrajectory, Optional<ReefLocs>>(m_routine.trajectory(rToH), Optional.empty()));
                 if (i < m_scoreLocs.size() - 1) {
-                    String hToR = HPToReefTrajs.get(new Pair<HPStation, ReefLocs>(m_hpStations.get(i), m_scoreLocs.get(i + 1)));
-                    trajsList.add(m_routine.trajectory(hToR));
+                    var reefLoc = m_scoreLocs.get(i + 1);
+                    String hToR = HPToReefShortTrajs.get(new Pair<HPStation, ReefLocs>(m_hpStations.get(i), reefLoc));
+                    trajsList.add(
+                        new Pair<AutoTrajectory, Optional<ReefLocs>>(m_routine.trajectory(hToR), Optional.of(reefLoc)));
                     System.out.println(rToH);
                 }
             }
 
             // for .5 autos.
             if(m_hpStations.size() > m_scoreLocs.size()) {
-                trajsList.add(m_routine.trajectory(ReefToHPTrajs.get(
-                    new Pair<ReefLocs, HPStation>(
-                        m_scoreLocs.get(m_scoreLocs.size() - 1), 
-                        m_hpStations.get(m_hpStations.size() - 1)
-                    )
-                )));
+                trajsList.add(
+                    new Pair<AutoTrajectory, Optional<ReefLocs>>(m_routine.trajectory(ReefToHPTrajs.get(
+                        new Pair<ReefLocs, HPStation>(
+                            m_scoreLocs.get(m_scoreLocs.size() - 1), 
+                            m_hpStations.get(m_hpStations.size() - 1)
+                        ))
+                ), Optional.empty()));
             }
 
             return trajsList;
@@ -176,10 +170,8 @@ public class WaltAutonFactory {
 
     private Command scoreCmd(EleHeight eleHeight) {
         return Commands.sequence(
-            m_ele.externalWaitUntilHomed(),
             m_superstructure.autonEleToScoringPosReq(eleHeight),
             m_superstructure.autonScoreReq(),
-            m_superstructure.simHasCoralToggle(),
             logTimer("CoralScored", () -> autonTimer),
             Commands.waitUntil(m_superstructure.getBottomBeamBreak().negate())
         );
@@ -194,12 +186,23 @@ public class WaltAutonFactory {
         leaveAuto.active().onTrue(
             Commands.sequence(
                 Commands.runOnce(() -> autonTimer.restart()),
-                // leave.resetOdometry(),
                 leave.cmd()
             )
         );
 
         return leaveAuto;
+    }
+
+    private Pose2d getReefAutoAlignPose(ReefLocs reefLoc) {
+        Pose2d reefPose = FieldConstants.kReefRobotLocationPoseMap.getOrDefault(reefLoc, new Pose2d());
+        return AllianceFlipUtil.apply(reefPose);
+    }
+
+    private Command autoAlignCommand(Supplier<ReefLocs> reefLocSup) {
+        return Commands.defer(() -> {
+            Pose2d alignPose = getReefAutoAlignPose(reefLocSup.get());
+            return m_drivetrain.moveToPose(alignPose).withTimeout(0.5).andThen(Commands.print("finish auto align"));
+        }, Set.of(m_drivetrain));
     }
 
     public AutoRoutine generateAuton() {
@@ -216,68 +219,28 @@ public class WaltAutonFactory {
             System.out.println("!!!!!!! BROKE !!!!!!!");
         }
 
-        var theTraj = StartToReefTrajs.get(new Pair<StartingLocs , ReefLocs>(m_startLoc, m_scoreLocs.get(0)));
+        var theTraj = StartToReefShortTrajs.get(new Pair<StartingLocs , ReefLocs>(m_startLoc, m_scoreLocs.get(0)));
         AutoTrajectory firstScoreTraj = m_routine.trajectory(theTraj);
         System.out.println("Running Path: " + theTraj);
 
-        if (onlyPreload()) {
-            if(m_pushTime) {
-                m_routine.active().onTrue(
-                    Commands.sequence(
-                        SimpleAutons.pushPartner(m_drivetrain),
-                        firstScoreTraj.cmd(),
-                        m_drivetrain.stopCmd()
-                    )
-                );
-            } else {
-                m_routine.active().onTrue(
-                Commands.sequence(
-                        Commands.runOnce(() -> autonTimer.restart()),
-                        firstScoreTraj.resetOdometry(),
-                        firstScoreTraj.cmd(),
-                        m_drivetrain.stopCmd()
-                    )
-                );
-            }
-
-            firstScoreTraj.done()
-            .onTrue(
-                Commands.sequence(
-                    scoreCmd(m_heights.get(heightCounter))
-                )
-            );
-
-            return m_routine;
+        Command firstCmd = firstScoreTraj.cmd();
+        if (RobotBase.isSimulation()) {
+            firstCmd = firstScoreTraj.resetOdometry().andThen(firstScoreTraj.cmd());
         }
+
+        m_routine.active().onTrue(
+            firstCmd
+        );
 
         // normal cycle logic down here
-        ArrayList<AutoTrajectory> allTheTrajs = trajMaker();
-
-        if(m_pushTime) {
-            m_routine.active().onTrue(
-                Commands.sequence(
-                    SimpleAutons.pushPartner(m_drivetrain),
-                    firstScoreTraj.cmd(),
-                    m_drivetrain.stopCmd()
-                )
-            );
-        } else {
-            m_routine.active().onTrue(
-            Commands.sequence(
-                    Commands.runOnce(() -> autonTimer.restart()),
-                    firstScoreTraj.resetOdometry(),
-                    firstScoreTraj.cmd(),
-                    m_drivetrain.stopCmd()
-                )
-            );
-        }
+        ArrayList<Pair<AutoTrajectory, Optional<ReefLocs>>> allTheTrajs = trajMaker();
 
         firstScoreTraj.done()
             .onTrue(
                 Commands.sequence(
+                    autoAlignCommand(() -> m_scoreLocs.get(0)),
                     scoreCmd(m_heights.get(heightCounter++)),
-                    allTheTrajs.get(0).cmd(),
-                    m_drivetrain.stopCmd()
+                    allTheTrajs.get(0).getFirst().cmd()
                 )
             );
         
@@ -286,14 +249,12 @@ public class WaltAutonFactory {
             
             Command trajCmd = Commands.none();
             if ((allTrajIdx + 1) < allTheTrajs.size()) {
-                trajCmd = allTheTrajs.get(allTrajIdx + 1).cmd();
+                trajCmd = allTheTrajs.get(allTrajIdx + 1).getFirst().cmd();
             }
 
-            allTheTrajs.get(allTrajIdx).done()
+            allTheTrajs.get(allTrajIdx).getFirst().done()
                 .onTrue(Commands.sequence(
-                    m_superstructure.simHasCoralToggle(),
-                    Commands.waitUntil(m_superstructure.getTopBeamBreak().debounce(0.08)
-                        .or(m_superstructure.simTrg_hasCoral)),
+                    Commands.waitUntil(m_superstructure.getTopBeamBreak().debounce(0.08)),
                     trajCmd,
                     m_drivetrain.stopCmd(),
                     Commands.print("Running Path: " + trajCmd)
@@ -307,18 +268,30 @@ public class WaltAutonFactory {
 
             Command nextTrajCmd = Commands.none();
             if (allTrajIdx + 1 < allTheTrajs.size()) {
-                nextTrajCmd = allTheTrajs.get(allTrajIdx + 1).cmd();
+                nextTrajCmd = allTheTrajs.get(allTrajIdx + 1).getFirst().cmd();
             }
 
-            allTheTrajs.get(allTrajIdx).done()
-                .onTrue(
-                    Commands.sequence(
-                        Commands.waitUntil(m_superstructure.getBottomBeamBreak()),
-                        scoreCmd(m_heights.get(heightCounter++)),
-                        nextTrajCmd,
-                        m_drivetrain.stopCmd()
-                    )
-                );
+            Command autoAlign = Commands.none();
+            AutoTrajectory runningTraj = allTheTrajs.get(allTrajIdx).getFirst();
+            Trigger afterPathTrg = runningTraj.done();
+            var reefLocOpt = allTheTrajs.get(allTrajIdx).getSecond(); 
+            if (reefLocOpt.isPresent()) {
+                autoAlign = autoAlignCommand(() -> reefLocOpt.get());
+                // double trajTime = runningTraj.getRawTrajectory().getTotalTime();
+                // afterPathTrg = runningTraj.atTimeBeforeEnd(trajTime * 0.3);
+            }
+
+            var pathDoneCmd = Commands.sequence(
+                autoAlign,
+                Commands.waitUntil(m_superstructure.getBottomBeamBreak()),
+                scoreCmd(m_heights.get(heightCounter++)),
+                nextTrajCmd,
+                m_drivetrain.stopCmd()
+            );
+
+           afterPathTrg.onTrue(
+                pathDoneCmd
+            );
             
             allTrajIdx++;
         }
